[gd_scene load_steps=14 format=3 uid="uid://hs2mytyqoi4c"]

[ext_resource type="Script" path="res://shared/HandlerClasses/UI.gd" id="1_uapss"]
[ext_resource type="Texture2D" uid="uid://drk5dy7nhkavt" path="res://features/GUI/textures/UIBottom_background.png" id="2_f7ndo"]
[ext_resource type="PackedScene" uid="uid://ba4afwkd8iv77" path="res://shared/HUD/ui_button_up.tscn" id="3_h72wp"]
[ext_resource type="Texture2D" uid="uid://dy2j46ciwsjmu" path="res://features/GUI/textures/Button_background_right.png" id="3_v6ggh"]
[ext_resource type="Texture2D" uid="uid://dd0phtrd2nbgq" path="res://features/GUI/textures/UIRightUp.png" id="4_a8s5j"]
[ext_resource type="Texture2D" uid="uid://cslwe8xrqw4b" path="res://features/GUI/textures/Button_background_left.png" id="4_s0ir5"]
[ext_resource type="PackedScene" uid="uid://cbv76juler6ym" path="res://shared/HUD/ui_button_down.tscn" id="5_07yxw"]
[ext_resource type="Texture2D" uid="uid://bbs0cwuwh53yx" path="res://features/GUI/textures/UILeftUp.png" id="6_iyvft"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pddki"]
texture = ExtResource("2_f7ndo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8os1k"]
texture = ExtResource("3_v6ggh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y7c67"]
texture = ExtResource("4_s0ir5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iavoi"]
texture = ExtResource("4_a8s5j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yx10f"]
texture = ExtResource("6_iyvft")

[node name="RTS_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uapss")

[node name="BottomPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = 721.0
offset_right = 1280.0
offset_bottom = 961.0
theme_override_styles/panel = SubResource("StyleBoxTexture_pddki")

[node name="ButtonRightPanel" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 1094.0
offset_top = 688.0
offset_right = 1280.6
offset_bottom = 721.3
theme_override_styles/panel = SubResource("StyleBoxTexture_8os1k")

[node name="ButtonLeftPanel" type="PanelContainer" parent="."]
layout_mode = 2
offset_top = 688.0
offset_right = 186.66
offset_bottom = 721.3
theme_override_styles/panel = SubResource("StyleBoxTexture_y7c67")

[node name="ButtonLeft" parent="." instance=ExtResource("3_h72wp")]
layout_direction = 2
layout_mode = 2
offset_left = 7.0
offset_top = 696.0
offset_right = 127.0
offset_bottom = 713.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ButtonRight" parent="." instance=ExtResource("3_h72wp")]
layout_direction = 3
layout_mode = 2
offset_left = 7.0
offset_top = 696.0
offset_right = 127.0
offset_bottom = 713.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ActionMenu" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 186.0
offset_top = 731.0
offset_right = 636.0
offset_bottom = 846.0

[node name="ActionContainer" type="GridContainer" parent="ActionMenu"]
layout_mode = 2
theme_override_constants/h_separation = 64
columns = 3

[node name="QueueMenu" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 645.0
offset_top = 731.0
offset_right = 1095.0
offset_bottom = 846.0

[node name="QueueContainer" type="GridContainer" parent="QueueMenu"]
layout_mode = 2
theme_override_constants/h_separation = 64
columns = 3

[node name="MinimapPanel" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 1092.0
offset_top = -232.0
offset_right = 1280.0
offset_bottom = 39.0
theme_override_styles/panel = SubResource("StyleBoxTexture_iavoi")

[node name="ButtonMap" parent="." instance=ExtResource("5_07yxw")]
layout_mode = 2
offset_left = 1154.0
offset_top = 11.0
offset_right = 1274.0
offset_bottom = 28.0

[node name="SelectionPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = -232.0
offset_right = 188.0
offset_bottom = 39.0
theme_override_styles/panel = SubResource("StyleBoxTexture_yx10f")

[node name="ButtonSelection" parent="." instance=ExtResource("5_07yxw")]
layout_mode = 0
offset_left = 6.0
offset_top = 11.0
offset_right = 126.0
offset_bottom = 28.0

[node name="SelectionMenu" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = -47.0
offset_right = 181.0
offset_bottom = -7.0
pivot_offset = Vector2(5, 5)

[node name="SelectionContainer" type="GridContainer" parent="SelectionMenu"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
